# Sarjy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: routes.py
app/core/: errors.py  extraction.py  logging_setup.py  orchestrator.py  prompts.py  ratelimit.py
app/db/: engine.py  models.py  repositories.py
app/schemas/: api.py  tools.py
app/services/: llm.py  moderation.py  reply_cache.py  stt.py  tts.py
app/static/: app.js  audio.js  index.html  styles.css
app/tools/: memory_tools.py  places.py  registry.py
app/workflow/: fsm.py  slots.py
docs/: ARCHITECTURE.md  DECISIONS.md  DEMO.md  DEPLOYMENT.md  LIMITATIONS.md  TESTING.md
docs/preread/: preread.html
docs/presentation/: PRESENTATION.md
scripts/: seed_demo.py  smoke_test.py  verify_keys.py
tests/: conftest.py  test_health.py
tests/integration/: test_booking_flow.py  test_converse_text.py  test_converse_voice.py  test_guardrails.py  test_memory.py  test_reliability.py  test_restaurant_search.py  test_vision.py
tests/unit/: test_extraction.py  test_fsm.py  test_memory_tools.py  test_metrics.py  test_places.py  test_repositories.py
