[project]
name = "sarjy"
version = "0.1.0"
description = "Sarjy - a web voice assistant that remembers you and plans dinner for you"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "openai>=1.40",
    "httpx>=0.27",
    "structlog>=24.1",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# B008: Depends()/Form()/Header() in argument defaults is FastAPI's core idiom.
"app/api/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `from tests.conftest import ...` resolves
# regardless of how pytest is invoked (bare `pytest` in CI vs `python -m pytest`).
pythonpath = ["."]
